Qualify master data with held-out and 80-pair stress profiles
Signed-off-by: tylerje <tyler@tsjensen.com>